--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
+pip-review==1.3.0
 platformdirs==2.6.2
 prometheus-client==0.15.0
 prompt-toolkit==3.0.36
